# rc_visard_moveit_tutorial

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: config.rviz  rc_visard_pointcloud.yaml
launch/: demo.launch  grasp_trajectory.launch  grasp_trajectory.launch.backup  move_group.launch  sensor_manager.launch.xml  ur5_moveit_planning_execution.launch
src/: grasp_trajectory_planning.cpp
